Fixed navbar (finally). Horizontal alignment for navbar.

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
-@import "../node_modules/bootstrap/dist/css/bootstrap.min.css";
-/*@import "../node_modules/primeng/resources/themes/bootstrap/theme.css";*/
-/*@import "../node_modules/primeng/resources/primeng.min.css";*/
+@import "~bootstrap/dist/css/bootstrap.min.css";
+@import "~font-awesome/css/font-awesome.css"
+
+body {
+	padding-top: 150px;
+	background-color: red;
+}
